--- a/product_extend/views/product_brand_view.xml
+++ b/product_extend/views/product_brand_view.xml
@@ -34,12 +34,13 @@
                     </field>
           </record>
 
-        <record id="product_brand_form" model="ir.ui.view">
+        <record id="product_tags_form" model="ir.ui.view">
             <field name="name">product.tags.form</field>
             <field name="model">product.tags</field>
             <field name="arch" type="xml">
                 <form>
                     <field name="name"/>
+                    <field name="parent_id"/>
                 </form>
             </field>
         </record>
