--- a/product_extend/views/product_brand_view.xml
+++ b/product_extend/views/product_brand_view.xml
@@ -29,7 +29,7 @@
 
                         <tree string="Tags">
 
-                            <field name="name"/>
+                            <field name="display_name"/>
                         </tree>
                     </field>
           </record>
