--- a/invoice_in_picking/wizard/stock_invoice_onshipping_view.xml
+++ b/invoice_in_picking/wizard/stock_invoice_onshipping_view.xml
@@ -12,6 +12,7 @@
                   <group>
                       <field name="journal_id" domain="[('type','=',journal_type)]"/>
                       <field name="group"/>
+                      <field name="refund"/>
                       <field name="invoice_date" />
                   </group>
                   <footer>
