--- a/dispatch/wizard/stock_dispatch_wizard.xml
+++ b/dispatch/wizard/stock_dispatch_wizard.xml
@@ -11,9 +11,10 @@
                         <group>
                             <field name="origin"/>
                             <field name="company_id" invisible="1"/>
+                            <field name="wh_id"/>
                         </group>
                         <separator string="Destinations"/>
-                        <field name="company_dest_ids"/>
+                        <field name="wh_ids"/>
                     </group>
                     <footer>
                         <button name="validate"
