--- a/dispatch/views/stock_warehouse_views.xml
+++ b/dispatch/views/stock_warehouse_views.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="stock.view_warehouse"/>
             <field name="arch" type="xml">
                 <field name="wh_output_stock_loc_id" position="after">
-                    <field name="supplier_location_id"/>
+                    <field name="inter_route_id"/>
                 </field>
             </field>
         </record>
