--- a/product_extend/views/product_brand_view.xml
+++ b/product_extend/views/product_brand_view.xml
@@ -21,6 +21,9 @@
                     <field name="product_tags_ids" widget="many2many_tags" />
                     <field name="product_brand_id"/>
                 </field>
+                 <field name="barcode" position="after">
+                    <field name="ref_variante"/>
+                </field>
             </field>
         </record>
 
