--- a/partner_extend/views/partner_view_extend.xml
+++ b/partner_extend/views/partner_view_extend.xml
@@ -5,6 +5,9 @@
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
+                <field name="phone" position="after">
+                    <field name="fax"/>
+                </field>
 
             <xpath expr="//notebook" position="inside">
                    <page string="Permis">
